--- a/app/src/main/res/layout/friends_header.xml
+++ b/app/src/main/res/layout/friends_header.xml
@@ -7,54 +7,8 @@
     android:paddingRight="10dp"
     android:paddingTop="10dp">
 
-    <LinearLayout
-        android:id="@id/action_meet_friends"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/card"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/banner_invite_friends_icon"
-            android:padding="5dp"
-            android:layout_marginLeft="5dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:gravity="center|bottom"
-                android:text="@string/meet_friends"
-                android:textColor="@color/main_green"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center|top"
-                android:text="@string/get_percent" />
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="96dp"
-            android:adjustViewBounds="true"
-            android:src="@drawable/banner_friends_default"
-            android:padding="5dp" />
-    </LinearLayout>
+    <include layout="@layout/meet_friends_view"
+        android:id="@id/action_meet_friends"/>
 
     <LinearLayout
         android:layout_width="match_parent"
