--- a/app/src/main/res/layout/offer_list_header.xml
+++ b/app/src/main/res/layout/offer_list_header.xml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
             android:text="@string/balance"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_marginRight="2dp"/>
+            android:textSize="18sp" />
 
         <TextView
             android:id="@id/balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="18sp"
+            android:layout_marginLeft="2dp"
             android:textColor="@color/main_green_selected"
-            android:layout_marginLeft="2dp"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <include layout="@layout/offer_view" android:id="@id/input_profile"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:id="@id/action_meet_friends">
+
+        <include layout="@layout/meet_friends_view" />
+    </LinearLayout>
+
+    <include
+        android:id="@id/input_profile"
+        layout="@layout/offer_view"
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/offers_caption"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="@string/offers_caption" />
 </LinearLayout>
