--- a/app/src/main/res/layout/empty_footer.xml
+++ b/app/src/main/res/layout/empty_footer.xml
@@ -8,27 +8,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="10dp"
         android:background="@drawable/clickable_card_with_bottom_corners"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="2dp"
         android:layout_marginBottom="20dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:src="@drawable/load_more"
-            android:visibility="gone" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:text="@string/show_more"
-            android:textColor="@color/main_color"
-            android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>
