--- a/app/src/main/res/layout/faq_answer_layout.xml
+++ b/app/src/main/res/layout/faq_answer_layout.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:autoLink="web"/>
     </LinearLayout>
 </ScrollView>
