--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/main_color">
+    android:id="@id/root_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/main_color"
+    android:padding="10dp">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@drawable/logo"
+        android:layout_above="@id/progress_circular"
         android:layout_centerHorizontal="true"
-        android:layout_above="@id/progress_circular"/>
+        android:src="@drawable/logo" />
+
     <ProgressBar
+        android:id="@id/progress_circular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@id/progress_circular"/>
+        android:layout_centerInParent="true" />
+
     <TextView
+        android:id="@id/loading_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/loading"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/progress_circular"
+        android:layout_centerHorizontal="true"
+        android:text="@string/loading"
+        android:gravity="center"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 </RelativeLayout>
