--- a/app/src/main/res/layout/withdrawal_layout.xml
+++ b/app/src/main/res/layout/withdrawal_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/phone_caption"
         android:inputType="phone"
-        android:layout_marginBottom="5dp"/>
+        android:layout="@layout/default_float_label_black_hint"/>
 
     <com.appbonus.android.component.FloatLabel
         android:id="@id/amount"
@@ -19,7 +19,7 @@
         android:hint="@string/amount_caption"
         android:inputType="phone"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"/>
+        android:layout="@layout/default_float_label_black_hint"/>
 
     <Button
         android:id="@id/withdrawal_phone"
