изменен текст, если нужно подтвердить номер телефона

--- a/app/src/main/res/layout/withdrawal_is_not_access_view.xml
+++ b/app/src/main/res/layout/withdrawal_is_not_access_view.xml
@@ -25,6 +25,8 @@
             android:layout_height="wrap_content"
             android:text="@string/confirm_phone"
             android:gravity="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:textColor="@color/main_color"
             android:layout_marginBottom="5dp"/>
         <TextView
