--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -72,4 +72,7 @@
     <item name="promo" type="id" />
     <item name="promo_label" type="id" />
     <item name="promo_view" type="id" />
+    <item name="code" type="id" />
+    <item name="enter" type="id" />
+    <item name="confirm" type="id" />
 </resources>
