хуманизация некоторых ошибок окно для кода подтверждения

--- a/app/src/main/res/layout/phone_code_layout.xml
+++ b/app/src/main/res/layout/phone_code_layout.xml
@@ -31,7 +31,7 @@
         android:textAllCaps="true" />
 
     <LinearLayout
-        android:id="@string/tech_support"
+        android:id="@id/tech_support"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
