--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -75,4 +75,5 @@
     <item name="code" type="id" />
     <item name="enter" type="id" />
     <item name="confirm" type="id" />
+    <item name="tech_support" type="id" />
 </resources>
