--- a/app/src/main/res/layout/offer_browse_layout.xml
+++ b/app/src/main/res/layout/offer_browse_layout.xml
@@ -91,30 +91,43 @@
                 android:id="@id/rules_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp">
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp">
 
                 <TextView
                     android:id="@id/rules_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginRight="10dp"
                     android:gravity="center"
                     android:text="@string/rules"
                     android:textColor="@color/main_color"
-                    android:textSize="16sp"
-                    android:layout_marginRight="10dp"
-                    android:layout_centerInParent="true"/>
+                    android:textSize="16sp" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/forward_icon"
-                    android:layout_toRightOf="@id/rules_text"
+                    android:layout_alignBottom="@id/rules_text"
                     android:layout_alignTop="@id/rules_text"
-                    android:layout_alignBottom="@id/rules_text" />
+                    android:layout_toRightOf="@id/rules_text"
+                    android:src="@drawable/forward_icon" />
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@id/note"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"/>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@id/share"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
@@ -122,8 +135,7 @@
             android:paddingBottom="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:paddingTop="20dp"
-            android:id="@id/share">
+            android:paddingTop="20dp">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -134,20 +146,20 @@
                     android:id="@id/share_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:contentDescription="@string/share"
-                    android:src="@drawable/share_icon"
-                    android:layout_marginRight="5dp"/>
+                    android:src="@drawable/share_icon" />
 
                 <TextView
                     android:id="@id/share_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dp"
                     android:layout_toRightOf="@id/share_icon"
                     android:text="@string/share"
                     android:textColor="@color/main_color"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="5dp"/>
+                    android:textSize="16sp" />
             </RelativeLayout>
 
             <TextView
