--- a/app/src/main/res/layout/profile_browse.xml
+++ b/app/src/main/res/layout/profile_browse.xml
@@ -21,13 +21,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/main_info" />
+
             <TextView
+                android:id="@id/confirm_phone_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/phone_was_not_confirmed"
                 android:textColor="@color/orange"
-                android:id="@id/confirm_phone_label"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <com.appbonus.android.component.FloatLabel
                 android:id="@id/phone"
@@ -35,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/phone_caption"
                 android:inputType="phone"
-                android:layout="@layout/not_editable_float_label"/>
+                android:layout="@layout/not_editable_float_label" />
 
             <!--<TextView
                 android:layout_width="match_parent"
@@ -52,15 +53,31 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/login_caption"
                 android:inputType="textEmailAddress"
+                android:layout="@layout/not_editable_float_label" />
+
+            <com.appbonus.android.component.FloatLabel
+                android:id="@id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/name_caption"
+                android:layout="@layout/not_editable_float_label" />
+
+            <com.appbonus.android.component.FloatLabel
+                android:id="@id/birthdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/birthdate_caption"
                 android:layout="@layout/not_editable_float_label"/>
 
             <TextView
+                android:id="@id/sex"
                 style="@style/EditTextStyle"
-                android:focusableInTouchMode="false"
-                android:id="@id/country"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/country_caption" />
+                android:hint="@string/sex_caption"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
 
         </LinearLayout>
 
