--- a/app/src/main/res/layout/profile_editor.xml
+++ b/app/src/main/res/layout/profile_editor.xml
@@ -56,7 +56,8 @@
                 android:id="@id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/name_caption" />
+                android:hint="@string/name_caption"
+                android:inputType="textCapSentences"/>
 
             <com.appbonus.android.component.FloatLabel
                 android:id="@id/birthdate"
@@ -67,7 +68,7 @@
 
             <Spinner
                 android:id="@id/sex"
-                style="@style/EditTextStyle"
+                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
