--- a/app/src/main/res/layout/profile_editor.xml
+++ b/app/src/main/res/layout/profile_editor.xml
@@ -34,7 +34,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/phone_caption"
-                android:inputType="phone"/>
+                android:inputType="phone"
+                android:layout="@layout/default_float_label_phone_white_hint"/>
 
             <TextView
                 android:layout_width="match_parent"
