--- a/app/src/main/res/layout/balance_layout.xml
+++ b/app/src/main/res/layout/balance_layout.xml
@@ -10,7 +10,8 @@
         android:divider="@null"
         android:dividerHeight="0dip"
         android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false">
+        android:headerDividersEnabled="false"
+        android:listSelector="@android:color/transparent">
 
     </com.paging.listview.PagingListView>
 </LinearLayout>
