--- a/app/src/main/res/layout/meet_friends_view.xml
+++ b/app/src/main/res/layout/meet_friends_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/card"
+    android:background="@drawable/clickable_card"
     android:orientation="horizontal">
 
 
