--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -80,4 +80,6 @@
     <item name="name" type="id" />
     <item name="birthdate" type="id" />
     <item name="sex" type="id" />
+    <item name="meet_friends_promo" type="id" />
+    <item name="promo_link" type="id" />
 </resources>
