--- a/app/src/main/res/layout/meet_friends_layout.xml
+++ b/app/src/main/res/layout/meet_friends_layout.xml
@@ -185,6 +185,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:inputType="none"
+                android:singleLine="true"
                 android:textIsSelectable="true" />
         </LinearLayout>
     </LinearLayout>
