--- a/app/src/main/res/layout/activity_banned_device.xml
+++ b/app/src/main/res/layout/activity_banned_device.xml
@@ -8,11 +8,11 @@
     android:padding="16sp">
 
     <TextView
+        android:id="@android:id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:text="@string/you_has_rooted_device"/>
+        android:textStyle="bold"/>
 </LinearLayout>
