измененная регистрация через ВК

--- a/app/src/main/res/layout/registration_layout.xml
+++ b/app/src/main/res/layout/registration_layout.xml
@@ -50,6 +50,7 @@
             android:layout_marginTop="10dp"/>
 
         <LinearLayout
+            android:id="@id/vkontakte"
             style="@style/vk_login_button"
             android:layout_marginTop="10dp"
             android:onClick="registerVkHandler">
