--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -82,4 +82,5 @@
     <item name="sex" type="id" />
     <item name="meet_friends_promo" type="id" />
     <item name="promo_link" type="id" />
+    <item name="vkontakte" type="id" />
 </resources>
