--- a/app/src/main/res/layout/profile_editor.xml
+++ b/app/src/main/res/layout/profile_editor.xml
@@ -104,6 +104,13 @@
                 android:text="@string/password_changing" />
 
             <com.appbonus.android.component.FloatLabel
+                android:id="@id/current_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/current_password_caption"
+                android:inputType="textPassword" />
+
+            <com.appbonus.android.component.FloatLabel
                 android:id="@id/new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
