--- a/app/src/main/res/layout/meet_friends_layout.xml
+++ b/app/src/main/res/layout/meet_friends_layout.xml
@@ -186,7 +186,8 @@
                 android:layout_marginTop="5dp"
                 android:inputType="none"
                 android:singleLine="true"
-                android:textIsSelectable="true" />
+                android:focusable="false"
+                android:textIsSelectable="false" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
